--- a/Web/Views/Cancion/Details.cshtml
+++ b/Web/Views/Cancion/Details.cshtml
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-
+                <h3>CONSULTAR CANCIÓN</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
