--- a/Web/Views/Cancion/Index.cshtml
+++ b/Web/Views/Cancion/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-
+                <h3>CANCIONES</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
