--- a/Web/Views/Categoria/Create.cshtml
+++ b/Web/Views/Categoria/Create.cshtml
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-
+                <h3>CREAR CATEGORÍA</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
