--- a/Web/Views/Error/Default.cshtml
+++ b/Web/Views/Error/Default.cshtml
@@ -4,22 +4,7 @@
 
 <br>
 
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
 
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
-                    <li class="breadcrumb-item active">Error</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
 
 
 @if (TempData["Message"] != null)
@@ -33,8 +18,11 @@
 
 <section class="content">
     <div class="error-page">
+        @*
         <h2 class="headline text-danger"> 500</h2>
-
+            *@
+        
+        <img src="~/Content/dist/img/Error/computer.png" />
         <div class="error-content">
             <h3><i class="fas fa-exclamation-triangle text-danger"></i> Ups! Algo salió mal :(</h3>
 
