--- a/Web/Views/Error/NotFound.cshtml
+++ b/Web/Views/Error/NotFound.cshtml
@@ -1,28 +1,16 @@
 ﻿@{ ViewBag.Title = "Error"; }
 
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
 
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
-                    <li class="breadcrumb-item active">Página no encontrada</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
 
 
 
 <section class="content">
     <div class="error-page">
+        @*
         <h2 class="headline text-warning"> 404</h2>
+        *@
 
+        <img src="~/Content/dist/img/Error/page-not-found.png"/>
         <div class="error-content">
             <h3><i class="fas fa-exclamation-triangle text-warning"></i> Ups! No se encuentra el recurso.</h3>
 
