--- a/Web/Views/Login/UnAuthorized.cshtml
+++ b/Web/Views/Login/UnAuthorized.cshtml
@@ -4,28 +4,16 @@
 @{ Layout = Layout = "~/Views/Shared/_Layout.cshtml"; ; }
 
 
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
 
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
-                    <li class="breadcrumb-item active">No autorizado</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
 
 
 
 <section class="content">
     <div class="error-page">
+        @*
         <h2 class="headline text-warning"> 401</h2>
+        *@
+        <img src="~/Content/dist/img/Error/unauthorized.png"/>
 
         <div class="error-content">
             <h3><i class="fas fa-exclamation-triangle text-warning"></i> Ups! Hubo un error.</h3>
@@ -37,7 +25,7 @@
             <br />
             <br />
 
-            <a  class="btn btn-secondary" onclick="goBack()">
+            <a class="btn btn-secondary" onclick="goBack()">
                 <i class="fas fa-arrow-alt-circle-left">    Volver</i>
             </a>
 
