--- a/Web/Views/Puesto/Index.cshtml
+++ b/Web/Views/Puesto/Index.cshtml
@@ -21,6 +21,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
+                <h3>PUESTOS</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
