--- a/Web/Views/RolServicio/Details.cshtml
+++ b/Web/Views/RolServicio/Details.cshtml
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-
+                <h3>CONSULTA ROL DE SERVICIO</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
