--- a/Web/Views/RolServicio/Index.cshtml
+++ b/Web/Views/RolServicio/Index.cshtml
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-
+                <h3>ROLES DE SERVICIO</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
