--- a/Web/Views/Usuario/Create.cshtml
+++ b/Web/Views/Usuario/Create.cshtml
@@ -7,6 +7,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
+                <h3>CREAR USUARIO</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -67,20 +68,6 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.IdRol, htmlAttributes: new { @class = "control-label" })
-                    <div class="col-md-8">
-                        @Html.DropDownListFor(m => m.IdRol, new SelectList(ViewBag.Rol, "Id", "Descripcion"), new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.IdRol, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
                 <div class="form-group">
                     <strong class="text-danger">*</strong>
@@ -90,6 +77,21 @@
                         @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
                     </div>
                 </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.IdRol, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(m => m.IdRol, new SelectList(ViewBag.Rol, "Id", "Descripcion"), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.IdRol, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
 
             </div>
         </div>
