--- a/Web/Views/Usuario/Edit.cshtml
+++ b/Web/Views/Usuario/Edit.cshtml
@@ -7,6 +7,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
+                <h3>EDITAR USUARIO</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -65,10 +66,11 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.IdRol, htmlAttributes: new { @class = "control-label" })
+                    <strong class="text-danger">*</strong>
+                    @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label" })
                     <div class="col-md-8">
-                        @Html.DropDownListFor(m => m.IdRol, new SelectList(ViewBag.Rol, "Id", "Descripcion"), new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.IdRol, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
@@ -78,15 +80,14 @@
                         @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
                 <div class="form-group">
-                    <strong class="text-danger">*</strong>
-                    @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.IdRol, htmlAttributes: new { @class = "control-label" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
+                        @Html.DropDownListFor(m => m.IdRol, new SelectList(ViewBag.Rol, "Id", "Descripcion"), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.IdRol, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
                 <div class="form-group">
                     <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
                         @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
