--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -91,7 +91,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="#" class="nav-link pacientes">
+                            <a href="@Url.Action("ReporteSesion","Reporte")" class="nav-link pacientes">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Reporte de accesos</p>
                             </a>
