--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -97,13 +97,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="@Url.Action("ReporteUsuariosIngresados","Reporte")" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Reporte de usuarios</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="@Url.Action("ReporteServicios","Reporte")" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Reporte fechas de servicio</p>
                             </a>
