--- a/Web/Views/Calendario/Index.cshtml
+++ b/Web/Views/Calendario/Index.cshtml
@@ -557,15 +557,15 @@
                         selectedEvent = calEvent;
                         $('#myModal #eventTitle').text(calEvent.title);
                         var $description = $('<div/>');
-                        $description.append($('<p/>').html('<b>Título:</b>    ' + calEvent.title));
-                        $description.append($('<p/>').html('<b>Inicia:</b>    ' + calEvent.start.format("DD MMMM YYYY, HH:mm a")));
-                        $description.append($('<p/>').html('<b>Finaliza:</b>    ' + calEvent.end.format("DD MMMM YYYY, HH:mm a")));
+                        $description.append($('<p/>').html('<b>Título:</b>   ' + calEvent.title + '<br/>'));
+                        $description.append($('<p/>').html('<b>Inicia:</b>    ' + calEvent.start.format("DD MMMM YYYY, HH:mm a") + '<br/>'));
+                        $description.append($('<p/>').html('<b>Finaliza:</b>    ' + calEvent.end.format("DD MMMM YYYY, HH:mm a") + '<br/>'));
 
                         if (calEvent.description != null)
-                            $description.append($('<p/ class="text-justify" style="height: 100px; overflow-y: scroll">').html('<b>Descripción:  </b>' + calEvent.description));
+                            $description.append($('<p/ class="text-justify" style="height: 100px; overflow-y: scroll">').html('<b>Descripción:  </b>' + calEvent.description + '<br/>'));
                         else
-                            $description.append($('<p/>').html('<b>Descripción: </b> Sin descripción'));
-                        $description.append($('<p/>').html('<b>Canciones:   </b>' + calEvent.canciones.map(function (data) { return data.Nombre })));
+                            $description.append($('<p/>').html('<b>Descripción: </b> Sin descripción' + '<br/>'));
+                        $description.append($('<p/>').html('<b>Canciones:   </b>' + calEvent.canciones.map(function (data) { return data.Nombre }) + '<br/>'));
                         $description.append('<a href='+"../RolServicio/Details/"+calEvent.eventID+'>Más detalles</a>');
                         $('#myModal #pDetails').empty().html($description);
 
