--- a/Web/Views/Reporte/ReporteSesion.cshtml
+++ b/Web/Views/Reporte/ReporteSesion.cshtml
@@ -61,7 +61,7 @@
 
 @section scripts {
 
-
+    @Scripts.Render("~/bundles/jqueryajax")
 
 
     <script>
@@ -156,7 +156,7 @@
                 if (result.isConfirmed) {
                     $.ajax({
                         type: "POST",
-                        url: '/Reporte/BorrarBitacorasSesion',
+                        url: '/Reporte/DeleteBitacorasSesion',
                         success: function () {
 
                             location.reload();
