--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -91,19 +91,19 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="@Url.Action("ReporteSesion","Reporte")" class="nav-link pacientes">
+                            <a href="@Url.Action("ReporteSesion","Reporte")" class="nav-link pacientes" id="reportesesion">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Reporte de accesos</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("ReporteUsuariosIngresados","Reporte")" class="nav-link">
+                            <a href="@Url.Action("ReporteUsuariosIngresados","Reporte")" class="nav-link" id="reporteusuarios">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Reporte de usuarios</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("ReporteServicios","Reporte")" class="nav-link">
+                            <a href="@Url.Action("ReporteServicios","Reporte")" class="nav-link" id="reporteservicios">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Reporte fechas de servicio</p>
                             </a>
