--- a/Web/Views/Reporte/ReporteSesion.cshtml
+++ b/Web/Views/Reporte/ReporteSesion.cshtml
@@ -13,12 +13,12 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h3>Reportes</h3>
+                <h3>REPORTE ACCESOS AL SISTEMA</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
-                    <li class="breadcrumb-item active">Reporte</li>
+                    <li class="breadcrumb-item active">Reportes</li>
                 </ol>
             </div><!-- /.col -->
         </div><!-- /.row -->
@@ -28,34 +28,52 @@
 
 
 
-<div id="container-fluid">
-    <div class="row">
-        <div class="col">
-            <p class="tooltip--right float-left" data-tooltip="Genera un reporte de las sesiones de los usuarios">
-                <button class="btn btn-primary" onclick="Descargar()">
-                    <i class="glyphicon glyphicon-download"></i> Descargar Reporte
-                </button>
-            </p>
-        </div>
-        <div class="col text-center">
 
-        </div>
-        <div class="col">
-            <p class="tooltip--left float-right" data-tooltip="Elimina permanentemente todos los registros de sesiones.">
-                <a class="btn btn-danger" onclick="eliminar()">
-                    <i class="fas fa-trash mr-2"></i>
-                    Eliminar todo
-                </a>
-            </p>
+<center>
+    <div class="card card-default mt-3 col-md-8">
+        <div class="card-body p-3 col-md-12">
+            <div class="row text-left">
+                <div class="col-md-12">
+                    <div id="container-fluid">
+                        <div class="row">
+                            <div class="col">
+                                <p class="tooltip--right float-left" data-tooltip="Genera un reporte de las sesiones de los usuarios">
+                                    <button class="btn btn-primary" onclick="Descargar()">
+                                        <i class="fas fa-eye"></i> Mostrar Reporte
+                                    </button>
+                                </p>
+                            </div>
+                            <div class="col text-center">
+
+                            </div>
+                            <div class="col">
+                                <p class="tooltip--left float-right" data-tooltip="Elimina permanentemente todos los registros de sesiones.">
+                                    <a class="btn btn-danger" onclick="eliminar()">
+                                        <i class="fas fa-trash mr-2"></i>
+                                        Eliminar todo
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+            @*<iframe id="frmReporte" width="100%" height="550px" frameborder="0" scrolling="no"></iframe>*@
         </div>
     </div>
-</div>
+</center>
 
 
 
 
-<iframe id="frmReporte" width="100%" height="550px" frameborder="0" scrolling="no">
-</iframe>
+
+
+
+
+
 
 
 
@@ -81,32 +99,20 @@
 
         $(document).ready(function () {
 
-            Mostrar();
+            //Mostrar();
                 // Recibe los parámetros del Controller
                 var option = '@TempData["Action"]'
                 var message = '@TempData["Message"]'
-
-
-
-                if (option == 'S') {
-                    Swal.fire('Éxito!',
-                        'El registro fue salvado correctamente.',
-                        'success');
-                }
-
+            debugger;
 
                  if (option == 'D') {
                      Swal.fire('Éxito!',
-                         'El registro fue desactivado correctamente.',
+                         'Todos los registros de sesión fueron eliminados correctamente.',
                          'success');
                 }
 
 
-                 if (option == 'U') {
-                     Swal.fire('Éxito!',
-                         'El registro fue actualizado correctamente.',
-                         'success');
-                }
+
 
             if (option == 'E') {
                 Swal.fire('Error!',
@@ -125,8 +131,8 @@
     <script>
         //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
         $(document).ready(function () {
-            $("#mantenimientos").addClass('active');
-            $("#menucategorias").addClass('active');
+            $("#informes").addClass('active');
+            $("#reportesesion").addClass('active');
 
         });
 
