--- a/Web/Views/Categoria/Details.cshtml
+++ b/Web/Views/Categoria/Details.cshtml
@@ -40,7 +40,10 @@
                     {
                         foreach (var item in Model.Puesto)
                         {
-                            <p>@item.Descripcion</p>
+                            <ul>
+                                <li> <p>@item.Descripcion</p></li>
+                            </ul>
+                           
                         }
 
                     }
