--- a/Web/Views/RolServicio/Details.cshtml
+++ b/Web/Views/RolServicio/Details.cshtml
@@ -76,7 +76,7 @@
             <p>@item.Puesto.Descripcion : <b>@item.Usuario.NombreCompleto</b></p> }
                             else
                             {
-            <p>@item.Puesto.Descripcion : <span class="right badge badge-danger">Sin asignar</span></p>}
+            <p>@item.Puesto.Descripcion : <span class="right badge badge-warning">Sin asignar</span></p>}
 
                         </li>
                     </ul>}
