--- a/Web/Views/RolServicio/Create.cshtml
+++ b/Web/Views/RolServicio/Create.cshtml
@@ -215,24 +215,21 @@
 
 
                                 <div class=" d-flex p-0">
-                                    <ul class="nav nav-pills ml-auto p-2" id="nav-puestos">
-                                        @if (categorias != null)
+
+                                    @if (categorias != null)
+                                    {
+                                        foreach (var cat in categorias)
                                         {
-                                            foreach (var cat in categorias)
-                                            {
-                                                
+                                            <ul class="nav nav-pills ml-auto p-2" id="nav-puestos">
                                                 <li class="nav-item"><a class="nav-link" href="#@cat.Id" onclick="mostrarPuestos(@cat.Id)" data-toggle="tab">@cat.Descripcion</a></li>
-                                            }
-                                        }
-                                        else
-                                        {
-                                            <li>
-                                                <span class="right badge badge-danger">Aún no hay categorías.</span>
-                                            </li>
-                                        }
+                                            </ul>
 
-
-                                    </ul>
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <span class="right badge badge-danger ml-auto p-2" data-info="error-categoria">Aún no hay categorías.</span>
+                                    }
                                 </div>
 
 
@@ -449,6 +446,7 @@
             //FIN VALIDACION
 
             stepper.next(); //MUESTRA EL SIGUIENTE TAB
+            $('#nav-puestos li:first a').click(); //AQUI MUESTRA LOS PUESTOS DE LA PRIMERA CATEGORIA
             $('#nav-puestos li a').each(function () { //PARA QUE NO HAYAN 2 'LI' ACTIVOS
                 $(this).removeClass("active");
             });
@@ -457,7 +455,7 @@
 
         }
 
-
+        /*
         //PARA MOSTRAR LOS PUESTOS LA PRIMERA VEZ AUTOMATICAMENTE
         window.onload = function () {
             $.ajax({
@@ -470,7 +468,7 @@
                 }
             });
         }
-
+        */
 
 
 
@@ -553,6 +551,15 @@
 
             $('#btnSave').click(function () {
 
+
+
+                var count = $("#nav-puestos").children().length;
+                if (count == 0) {
+                    mensaje('error', 'No se puede guardar el registro debido a que no existen categorías disponibles', false);
+                    return;
+                }
+
+
                 //aqui se agregan los elementos seleccionados de los dropdown a las listas correspondientes
                 var listausuarios = [];
                 var listapuestos = [];
@@ -615,12 +622,12 @@
                     toast: true,
                     position: 'top-end',
                     showConfirmButton: false,
-                    timer: 3000,
+                    timer: 4000,
                 });
             } else {
                 var Toast = Swal.mixin({
                     showConfirmButton: false,
-                    timer: 2000,
+                    timer: 4000,
                     timerProgressBar: true,
                     didOpen: (toast) => {
                         toast.addEventListener('mouseenter', Swal.stopTimer)
