creacion de proceso de version

--- a/Web/Views/GestionCancion/Gestion.cshtml
+++ b/Web/Views/GestionCancion/Gestion.cshtml
@@ -1,16 +1,29 @@
-﻿
-@{
-    ViewBag.Title = "Versión";
-}
+﻿@model Infraestructure.Models.Cancion
+@{ ViewBag.Title = "Versión"; }
 
+<style>
+    .iframe-container {
+        position: relative;
+        width: 100%;
+        padding-bottom: 56.25%;
+        height: 0;
+    }
 
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+</style>
 
 <!-- Content Header (Page header) -->
 <div class="content-header">
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-
+                <h3>GESTIÓN DE VERSIONES</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -26,5 +39,194 @@
 
 
 
-<iframe width="560" height="315" src="https://facebook.com" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+@using (Ajax.BeginForm("MostrarVideo", "GestionCancion", new { Id = Model.Id }, new AjaxOptions
+{
+    HttpMethod = "GET",
+    UpdateTargetId = "resultado",
+    //OnSuccess = "onSuccessResult",
+    //OnBegin = "onBeginResult",
+    //OnFailure = "onFailureResult",
+    LoadingElementId = "imgloader",
+    LoadingElementDuration = 2000,
+    InsertionMode = InsertionMode.Replace
+
+}, new { id = "AjaxForm" }))
+{
+<div class="card card-default mt-3">
+    <div class="card-body">
+        <div class="card-header">
+            <h4> @Html.DisplayFor(model => model.Nombre)</h4>
+
+        </div>
+
+        <div class="col-md-12 row mt-5">
+            <div class="col-md-6">
+
+                <div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Url_version, htmlAttributes: new { @class = "control-label" })
+                        <p class="tooltip--right" data-tooltip="Copiar un enlace de YouTube para mostrar el video de la versión">
+                            <span style="color: Highlight" class="fas fa-info-circle"></span>
+                        </p>
+                        <div class="col-md-12">
+
+                            <div class="row">
+                                @Html.EditorFor(model => model.Url_version, new { htmlAttributes = new { @class = "form-control col-md-8" } })
+
+
+                            </div>
+
+                            <p id="error" class="text-danger"></p>
+
+                        </div>
+                        <div class="mt-4">
+                            <a href="https://www.youtube.com/?hl=es" target="_blank">Abrir YouTube  <i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary mb-5" id="verificarEnlace" style="float: right;">Verificar enlace</button>
+                </div>
+
+
+
+            </div>
+            <div class="col-md-6">
+                @if (Model.Url_version != "")
+                {<!--Imagen de progreso -->
+                    <div id="imgloader" style="display:none;position:absolute;top:45%;left:45%;padding:2px;">
+                        <img height="50px" src="~/Content/dist/img/loader.gif" />
+                    </div>
+                                        <div id="resultado"></div>}
+                @if (Model.Url_version != null)
+                {
+
+                    <div class="iframe-container">
+                        <iframe width="560"
+                                height="315"
+                                src="@Model.Url_version"
+                                frameborder="0">
+                            Hubo un problema al cargar el video.
+                        </iframe>
+                    </div>
+
+                    <button type="button"
+                            class="btn btn-danger mt-2"
+                            style="float: right;"
+                            onclick="eliminar(@Model.Id)">
+                        Eliminar video <i class="fas fa-trash"></i>
+                    </button>       
+                 }
+
+            </div>
+        </div>
+    </div>
+</div>}
+
+
+
+
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryajax")
+    @Scripts.Render("~/bundles/jqueryval")
+
+
+
+    <script>
+
+
+
+        $('#verificarEnlace').on("click", function validarURL() {
+            $('#error').text('');
+            var txt = $('#Url_version').val();
+            let reGex = /https:\/\/youtu.be[^' '\n\r]+/;
+
+            if (txt.trim() == "") {
+                $('#error').text('Debe ingresar el enlace del video.');
+                $('#Url_version').focus();
+                return;
+            }
+
+
+            if (!reGex.test(txt)) {
+                $('#error').text('Formato no permitido. Ejemplo de formato: https://youtu.be/......');
+                $('#Url_version').focus();
+                return;
+            }
+        });
+
+
+    </script>
+
+    <script>
+        $(document).ready(function () {
+            $('#Url_version').val('');
+        });
+    </script>
+
+    <script>
+
+        $(document).ready(function () {
+
+
+                // Recibe los parámetros del Controller
+                var option = '@TempData["Action"]'
+                var message = '@TempData["Message"]'
+
+
+
+                 if (option == 'U') {
+                     Swal.fire('Éxito!',
+                         'El registro fue actualizado correctamente.',
+                         'success');
+                }
+
+            if (option == 'E') {
+                Swal.fire('Error!',
+                    'Se ha producido un error: '+message,
+                    'error');
+            }
+        });
+
+
+
+    </script>
+
+
+    <script>
+        function eliminar(id) {
+            Swal.fire({
+                title: 'Deseas borrar el video?',
+                text: "",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, bórralo!',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        type: "POST",
+                        url: '/GestionCancion/Delete',
+                        data: { 'id': id },
+                        success: function (data) {
+
+                            location.reload();
+                        },
+                        error: function (xhr, status, error) {
+                            location.reload();
+                        }
+                    })
+
+
+                }
+            })
+        }
+    </script>
+}
+
+
+
 
