--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -14,7 +14,7 @@
         <nav class="mt-4">
             <ul class="nav nav-pills nav-sidebar flex-column open" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                 <li class="nav-item ">
 
 
@@ -72,7 +72,7 @@
                         <i class="nav-icon fa fa-music"></i>
 
                         <p>
-                            Gestión Canciones
+                            Gestión Versiones
                         </p>
                     </a>
                 </li>
@@ -136,14 +136,40 @@
                         <p>Correo electrónico</p>
                     </a>
                 </li>
-                <li class="nav-header">SUB-PROCESOS</li>
+
+
+
+
+
+
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-clock"></i>
+                        <i class="far fa-circle nav-icon"></i>
                         <p>
-                            Segundo plano
+                            Bitácoras
+                            <i class="right fas fa-angle-left"></i>
                         </p>
                     </a>
+                    <ul class="nav nav-treeview" style="display: none;">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-dot-circle nav-icon"></i>
+                                <p>Bitácora ...</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-dot-circle nav-icon"></i>
+                                <p>Bitácora ...</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="far fa-dot-circle nav-icon"></i>
+                                <p>Bitácora ...</p>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
 
             </ul>
