--- a/Web/Views/Cancion/Details.cshtml
+++ b/Web/Views/Cancion/Details.cshtml
@@ -50,20 +50,25 @@
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-8 order-2 order-md-1">
 
-                    @if (ViewBag.UrlFormat != "")
-                    {
-        <div class="iframe-container">
-            <iframe width="560"
-                    height="315"
-                    src="@ViewBag.UrlFormat"
-                    frameborder="0">
-                Hubo un problema al cargar el video.
-            </iframe>
-            <p>Video de la versión.</p>
-        </div> }
-                    else
-                    {
-        <span class="right badge badge-warning">No se ha ingresado un enlace para la versión.</span>}
+                @if (ViewBag.UrlFormat != "")
+                 {    
+                        <div class="iframe-container">
+                            <iframe width="560"
+                                    height="315"
+                                    src="@ViewBag.UrlFormat"
+                                    frameborder="0">
+                                Hubo un problema al cargar el video.
+                            </iframe>
+                            <p>Video de la versión.</p>
+                        </div> 
+                }
+                else
+                {
+                    <span class="right badge badge-warning">No se ha ingresado un enlace para la versión.</span>
+                    <br />
+                    <br />
+                    <a href="@Url.Action("Gestion","GestionCancion", Model)">Agregar versión <i class="fas fa-external-link-alt ml-3"></i></a>
+                }
 
 
 
