--- a/Web/Views/Cancion/Edit.cshtml
+++ b/Web/Views/Cancion/Edit.cshtml
@@ -33,6 +33,7 @@
             </div>
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
+            @Html.HiddenFor(model => model.Url_version)
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -83,19 +84,7 @@
 
             <div class="row">
 
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Url_version, htmlAttributes: new { @class = "control-label" })
-                        <p class="tooltip--right" data-tooltip="Copiar un enlace de YouTube para mostrar el video de la versión">
-                            <span style="color: Highlight" class="fas fa-info-circle"></span>
-                        </p>
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Url_version, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Url_version, "", new { @class = "text-danger" })
-                            <a href="https://www.youtube.com/?hl=es" target="_blank">Abrir YouTube</a>
-                        </div>
-                    </div>
-                </div>
+               
 
                 <div class="col-md-6">
                     <div class="form-group">
