--- a/Web/Views/GestionCancion/Index.cshtml
+++ b/Web/Views/GestionCancion/Index.cshtml
@@ -14,12 +14,12 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-
+            <h3>GESTION DE VERSIONES</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
-                    <li class="breadcrumb-item active">Gestión de canciones</li>
+                    <li class="breadcrumb-item active">Version de canciones</li>
                 </ol>
             </div><!-- /.col -->
         </div><!-- /.row -->
